Fixed white gap bug by removing margins in landing styling

--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -54,6 +54,7 @@
       text-align: left;
       align-self: flex-start;
       margin-left: 36px;
+      margin-right: 36px;
       margin-bottom: 30px;
 
       .title {
@@ -81,8 +82,6 @@
     flex-wrap: wrap;
     background-color: $primary-white-1;
     padding: 1rem;
-    margin-bottom: 4rem;
-    margin-left: 10rem;
 
     .details {
       background: linear-gradient(rgba(255, 255, 255, 0.6), rgb(255, 255, 255)),
@@ -138,7 +137,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
     text-align: center;
 
     .descriptionContainer {
@@ -431,13 +429,13 @@
   .statisticsWithIcon {
     display: flex;
     flex-direction: column;
-    padding: 48px 16px 48px 16px;
+    padding: 48px 0px 48px 0px;
     border-radius: 8px;
     color: $primary-black-1;
     background-color: #ffffff;
 
     .statRow {
-      width: 120rem;
+      width: 100rem;
       display: flex;
     }
 
@@ -503,6 +501,7 @@
 
     .landing {
       margin-left: 70px;
+      margin-right: 70px;
       margin-bottom: 10px;
 
       .titleContainer {
